--- a/docs/pages/docs/quickstart.mdx
+++ b/docs/pages/docs/quickstart.mdx
@@ -27,6 +27,7 @@ Before you begin with the Superfluid Web3 Subscription Widget, ensure you meet t
 
 - **JavaScript/TypeScript**: A foundational understanding of JavaScript/TypeScript is necessary for successful integration and troubleshooting.
 - **Blockchain Development**: Familiarity with the basics of blockchain development will be beneficial, given the widget's blockchain nature.
+- **Familiarity with Super Tokens and Streams**: Some familiarity with [Super Tokens](https://medium.com/superfluid-blog/superfluid-101-super-tokens-627ec16277ef) and [Streams](https://medium.com/superfluid-blog/superfluid-streams-5cc5141dd8a7) is desired but not necessary.
 
 ### Setup
 
@@ -183,7 +184,3 @@ if (userFlowRate >= requiredFlowRate) {
 ---
 
 We hope this guide helps you set up your SuperFluid Subscription Widget effortlessly. For any feedback or questions, don't hesitate to contact us.
-
-```
-
-```
