change ethereum to evm

--- a/docs/pages/docs/quickstart.mdx
+++ b/docs/pages/docs/quickstart.mdx
@@ -139,7 +139,7 @@ const myProvider = {DEFINE_YOUR_PROVIDER_HERE};
 async function getFlowRate(userAddress) {
   // Create a new Superfluid Framework instance
   const sf = await Framework.create({
-    chainId: INSERT_CHAIN_ID_HERE, // Replace with the chain ID of your Ethereum network
+    chainId: INSERT_CHAIN_ID_HERE, // Replace with the chain ID of your EVM network
     provider: myProvider,
   });
 
