italic instead of bold

--- a/docs/pages/docs/quickstart.mdx
+++ b/docs/pages/docs/quickstart.mdx
@@ -160,7 +160,7 @@ async function getFlowRate(userAddress) {
 }
 ```
 <Callout type="info">
-__Use EVM libraries (eg. [wagmi](https://wagmi.sh/) or [ethers](https://docs.ethers.org/)) to create the provider and retrieve the user's address. You can also use the [Superfluid console](https://console.superfluid.finance/ethereum/supertokens) to retrieve the Super Token address.__
+_Use EVM libraries (eg. [wagmi](https://wagmi.sh/) or [ethers](https://docs.ethers.org/)) to create the provider and retrieve the user's address. You can also use the [Superfluid console](https://console.superfluid.finance/ethereum/supertokens) to retrieve the Super Token address._
 </Callout>
 
 2.  **Check the Flow Rate**: Compare the user's flow rate against the required rate to access the content.
