--- a/docs/pages/docs/quickstart.mdx
+++ b/docs/pages/docs/quickstart.mdx
@@ -6,7 +6,7 @@ description: Set up and integrate the Web3 Subscription Widget with your website
 import { Callout, Tabs } from "nextra/components";
 import Image from "next/image";
 
-# Quickstart: Web3 Subscription Widget by Superfluid
+# Quickstart: Subscription Widget by Superfluid
 
 Welcome to the quickstart guide for the Web3 Subscription Widget. Follow the steps below to seamlessly integrate our widget into your website and gate content based on active web3 streams.
 
