add multiple pages and an index page

--- a/docs/pages/docs/Integration/handling-events.mdx
+++ b/docs/pages/docs/Integration/handling-events.mdx
@@ -15,4 +15,4 @@ query MyQuery {
 }
 ```
 
-<Callout> You can also use no-code solutions like [link-to-tool] to get alerts for specific events, enabling actions like membership record creation and NFT minting. </Callout>
+<Callout> Use our [console playground](https://console.superfluid.finance/subgraph) to find the right queries for you. Check out our [protocol docs](https://docs.superfluid.finance/superfluid/developers/subgraph) for links to all of our Subgraph APIs  </Callout>
