--- a/docs/pages/docs/Integration/how-to-integrate.mdx
+++ b/docs/pages/docs/Integration/how-to-integrate.mdx
@@ -2,9 +2,9 @@ import { Callout, Tabs, Steps, Cards, Tab } from "nextra/components";
 
 # Integrating Superfluid Subscriptions in your App
 
-## A Simple Integration Guide
+## A Simple Integration Guide for React
 
-This is a simple comprehensive guide on integrating Superfluid subscriptions in your app using different methods.
+This is a simple guide on integrating Superfluid subscriptions in your app using different a React component and [wagmi](https://wagmi.sh).
 
 <Steps>
 ### Step 1: Install the Necessary Packages
@@ -22,7 +22,7 @@ import SuperfluidWidget from '@superfluid-finance/widget';
 
 ### Step 3: Generate a Widget JSON
 
-Craft your Widget JSON using our no-code widget builder. This JSON dictates most of your widget's properties.
+Craft your Widget JSON following our step-by-step guide [here](../building-the-widget). This JSON dictates most of your widget's properties.
 
 ### Step 4: Implement the Widget in Your Component
 
