--- a/docs/pages/docs/quickstart.mdx
+++ b/docs/pages/docs/quickstart.mdx
@@ -1,12 +1,11 @@
 ---
-title: Quickstart Guide - Web3 Subscription Widget
-description: Set up and integrate the Web3 Subscription Widget with your website.
+title: Superfluid Subscriptions Docs - Quickstart
 ---
 
 import { Callout, Tabs } from "nextra/components";
 import Image from "next/image";
 
-# Quickstart: Web3 Subscription Widget by Superfluid
+# Quickstart: Your Web3 Subscription Widget by Superfluid
 
 Welcome to the quickstart guide for the Web3 Subscription Widget. Follow the steps below to seamlessly integrate our widget into your website and gate content based on active web3 streams.
 
@@ -115,7 +114,7 @@ If you want a more integrated experience where the Superfluid widget resides wit
    npm install @superfluid-finance/widget
    ```
 
-2. **Integrate in Your App**: Now, you can import the widget into your application. We won't dive deep into the details here, but you can refer to the detailed [Superfluid Widget Integration Guide](www.superfluid.finance).
+2. **Integrate in Your App**: Now, you can import the widget into your application. We won't dive deep into the details here, but you can refer to the detailed [Superfluid Widget Integration Guide](./integration/how-to-integrate).
 
 ## Step 3: Verifying Active Streams
 
