Modif for vercel

--- a/docs/pages/docs/Integration/how-to-integrate.mdx
+++ b/docs/pages/docs/Integration/how-to-integrate.mdx
@@ -4,7 +4,7 @@ import { Callout, Tabs, Steps, Cards, Tab } from "nextra/components";
 
 ## A Simple Integration Guide for React
 
-This is a simple guide on integrating Superfluid subscriptions in your app using different a React component and [wagmi](https://wagmi.sh).
+This is a simple guide on integrating Superfluid subscriptions in your app using a React component and [wagmi](https://wagmi.sh).
 
 <Steps>
 ### Step 1: Install the Necessary Packages
