--- a/docs/pages/docs/building-the-widget.mdx
+++ b/docs/pages/docs/building-the-widget.mdx
@@ -18,7 +18,7 @@ Building the Superfluid Checkout Widget using a direct JSON configuration provid
 
 ### Product Details
 
-The `productDetails` object houses specifics about the product:
+The `productDetails` object houses specifics about your product:
 
 ```json
 {
