--- a/docs/pages/docs/quickstart.mdx
+++ b/docs/pages/docs/quickstart.mdx
@@ -20,7 +20,7 @@ Before you begin with the Superfluid Web3 Subscription Widget, ensure you meet t
 
 ### Knowledge
 
-- **JavaScript/TypeScript**: A foundational understanding of JavaScript/TypeScript is necessary for successful integration and troubleshooting.
+- **JavaScript/TypeScript (JS/TS)**: A foundational understanding of JavaScript/TypeScript is necessary for successful integration and troubleshooting.
 - **Blockchain Development**: Familiarity with the basics of blockchain development will be beneficial, given the widget's blockchain nature.
 - **Familiarity with Super Tokens and Streams**: Some familiarity with [Super Tokens](https://medium.com/superfluid-blog/superfluid-101-super-tokens-627ec16277ef) and [Streams](https://medium.com/superfluid-blog/superfluid-streams-5cc5141dd8a7) is desired but not necessary.
 
