--- a/docs/pages/docs/Integration/getting-stream-data.mdx
+++ b/docs/pages/docs/Integration/getting-stream-data.mdx
@@ -4,7 +4,7 @@ import { Callout, Steps, Cards } from "nextra/components";
 
 # Getting Stream Data
 
-Depending on your use case, there are two main ways to get stream data from Superfluid: via our SDK and our Subgraph.
+Depending on your use case, there are two main ways to get stream data from Superfluid: via the Superfluid SDK and via our Subgraph.
 
 ## Fetching Stream Data Using the SDK
 
