change to reflect on vercel

--- a/docs/pages/docs/building-the-widget.mdx
+++ b/docs/pages/docs/building-the-widget.mdx
@@ -5,7 +5,7 @@ import { Callout, Tabs } from "nextra/components";
 
 {/* prettier-ignore-start */}
 
-In order to build your widget and integrate it within your app, you need to have a JSON file containing the parameters you wish to have. You can generate that JSON file through direct configuration or by using a provided user interface (UI). Both methods have their advantages, and your choice will depend on your preference or project requirements.
+In order to build your widget and integrate it inside your app, you need to have a JSON file containing the parameters you wish to have. You can generate that JSON file through direct configuration or by using a provided user interface (UI). Both methods have their advantages, and your choice will depend on your preference or project requirements.
 
 ## Table of Contents
 
