--- a/docs/pages/docs/faq.mdx
+++ b/docs/pages/docs/faq.mdx
@@ -4,7 +4,7 @@
 
 ## What Is Superfluid?
 
-Superfluid is a groundbreaking asset streaming protocol designed for crypto-native businesses and DAOs worldwide,
+Superfluid is an asset streaming protocol designed for crypto-native businesses and DAOs worldwide,
 facilitating subscriptions, salaries, vesting, and rewards. It employs the Super Token, an enhanced version of the ERC20 standard,
 to execute novel value movements automatically, representing real-time cash flows without gas consumption. The Super Token has two distinctive Super Agreements:
 the Constant Flow Agreement for continuous token flow between accounts without capital lockup, and the Instant Distribution Agreement for proportion-based token
