--- a/docs/pages/docs/nft-gating.mdx
+++ b/docs/pages/docs/nft-gating.mdx
@@ -3,7 +3,7 @@ import Image from "next/image";
 
 # NFT Gating
 
-Gate your content using special NFTs! Use the widget builder to deploy your unique NFT, allowing you to effectively gate your products. Here's how it works:
+Gate your content using our special NFTs! Use the widget builder to deploy your unique NFT, allowing you to effectively gate your products. Here's how it works:
 
 1. A user subscribes to your product.
 2. Upon subscription, an NFT token is assigned to them, serving as a proof of subscription.
