--- a/docs/pages/docs/quickstart.mdx
+++ b/docs/pages/docs/quickstart.mdx
@@ -3,7 +3,7 @@ import Image from "next/image";
 
 # Quickstart: Your Web3 Subscription Widget by Superfluid
 
-Welcome to the quickstart guide for the Web3 Subscription Widget. Follow the steps below to seamlessly integrate our widget into your website and gate content based on active web3 streams.
+Welcome to the quickstart guide for the Superfluid Subscription Widget. Follow the steps below to seamlessly integrate our widget into your website and gate content based on active web3 streams.
 
 ## Table of Contents
 
