Add Widget Preview

--- a/docs/pages/about.mdx
+++ b/docs/pages/about.mdx
@@ -89,7 +89,7 @@ import { Tabs, Tab } from "nextra-theme-docs";
   />
 </svg>
     </>
-# Subscriptions Documentation
+# Checkout Widget Documentation
 
 </div>
 
