--- a/docs/pages/docs/building-the-widget.mdx
+++ b/docs/pages/docs/building-the-widget.mdx
@@ -101,7 +101,7 @@ For those who prefer a more visual approach or might not be as comfortable with 
 
 <Image src="/RecordingBuilder.gif" alt="Hello" width={1000} height={1000} />
 
-1. **Access the Superfluid Builder UI:** Navigate to the Superfluid Builder platform and select the "Checkout Widget Builder" option.
+1. **Access the [Superfluid Builder UI](https://checkout-builder.superfluid.finance/):** Navigate to the Superfluid Builder platform and select "Enter Builder".
 2. **Define Product Details:** Use the form fields provided to enter the name, description, and image for your product.
 3. **Specify Payment Options:** Add one or more payment options by providing the receiver's Ethereum address, network, super token details, and the desired flow rate. If you have predefined super tokens, you can select them from a dropdown list.
 4. **Set Default Wrap Amount & Behavior:** Define the default wrap amount for transactions and specify the behavior for modifying the flow rate using the provided UI elements.
