--- a/docs/pages/docs/integrate-the-widget/how-to-integrate.mdx
+++ b/docs/pages/docs/integrate-the-widget/how-to-integrate.mdx
@@ -1,10 +1,10 @@
 import { Callout, Tabs, Steps, Cards, Tab } from "nextra/components";
 
-# Integrating Superfluid Subscriptions in your App
+# Integrating Superfluid Checkout Widget in your App
 
 ## A Simple Integration Guide for React
 
-This is a simple guide on integrating Superfluid subscriptions in your app using a React component and [wagmi](https://wagmi.sh).
+This is a simple guide on integrating Superfluid Checkout Widget in your app using a React component and [wagmi](https://wagmi.sh).
 
 <Steps>
 ### Step 1: Install the Necessary Packages
