--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,5 +1,6 @@
 
 import { Tabs, Tab } from "nextra-theme-docs";
+import {Widget} from "../components/widget";
 
 <br />
 <br />
@@ -90,12 +91,14 @@ import { Tabs, Tab } from "nextra-theme-docs";
   />
 </svg>
     </>
-# Subscriptions Documentation
+# Checkout Widget Documentation
 
 [Get Started](/docs/quickstart) · [Examples](https://github.com/superfluid-finance/widget/tree/master/examples) ·
 [GitHub Repository](https://github.com/superfluid-finance/widget/) · [Superfluid Protocol Docs](https://docs.superfluid.finance/)
 
 </div>
+
+
 
 The **Superfluid Checkout Widget** demonstrates a clean pattern for subscription UX in web3 using Superfluid. Here are some highlights:
 
@@ -106,3 +109,8 @@ The **Superfluid Checkout Widget** demonstrates a clean pattern for subscription
 - Fonts, shapes, colors are all customizable.
 
 The widget is designed to be integrated into existing **Wagmi** front ends using a **React** or **Vue** component. Import the widget library, provide a JSON that outlines your widget’s behavior in the props of the subscription checkout component, and your widget will perform as intended.
+
+&nbsp;
+<div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center', justifyContent: 'center' }}>
+<Widget/>
+</div>
