Change to subscriptions and add about link

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,6 +1,7 @@
 
 import { Tabs, Tab } from "nextra-theme-docs";
 import {Widget} from "../components/widget";
+import {ButtonWrapper} from "../components/buttonWrapper";
 
 <br />
 <br />
@@ -91,7 +92,7 @@ import {Widget} from "../components/widget";
   />
 </svg>
     </>
-# Checkout Widget Documentation
+# Subscriptions Documentation
 
 [Get Started](/docs/quickstart) · [Examples](https://github.com/superfluid-finance/widget/tree/master/examples) ·
 [GitHub Repository](https://github.com/superfluid-finance/widget/) · [Superfluid Protocol Docs](https://docs.superfluid.finance/)
@@ -100,7 +101,7 @@ import {Widget} from "../components/widget";
 
 
 
-The **Superfluid Checkout Widget** demonstrates a clean pattern for subscription UX in web3 using Superfluid. Here are some highlights:
+The **Superfluid Sucriptions product** demonstrates a clean pattern for subscription UX in web3 using Superfluid. For now, the Superfluid Subscriptions come in the form of a **Checkout Widget**:
 
 - It is minimally-opinionated and uses the most up to date web3 front end tooling.
 - It supports all Superfluid tokens and networks by default.
