--- a/docs/pages/docs/quickstart.mdx
+++ b/docs/pages/docs/quickstart.mdx
@@ -1,7 +1,7 @@
 import { Callout, Tabs } from "nextra/components";
 import Image from "next/image";
 
-# Quickstart: Your Web3 Checkout Widget by Superfluid
+# Quickstart: Your Web3 Subscriptions Checkout Widget by Superfluid
 
 Welcome to the quickstart guide for the Superfluid Subscription Widget. Follow the steps below to seamlessly integrate our widget into your website and gate content based on active web3 streams.
 
