--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -100,7 +100,7 @@ import {Widget} from "../components/widget";
 
 
 
-The **Superfluid Sucriptions product** demonstrates a clean pattern for subscription UX in web3 using Superfluid. For now, the Superfluid Subscriptions come in the form of a **Checkout Widget**:
+The **Superfluid Sucriptions** product demonstrates a clean pattern for subscription UX in web3 using Superfluid. For now, the Superfluid Subscriptions come in the form of a **Checkout Widget**:
 
 - It is minimally-opinionated and uses the most up to date web3 front end tooling.
 - It supports all Superfluid tokens and networks by default.
