--- a/docs/pages/docs/quickstart.mdx
+++ b/docs/pages/docs/quickstart.mdx
@@ -70,7 +70,7 @@ _For advanced styling options, explore the 'Styling' tab in the Checkout Builder
 
 </Callout>
 
-By following these steps, you will have a functioning Superfluid checkout widget ready to facilitate real-time payments on your platform. Happy streamlining!
+By following these steps, you'll have a functioning Superfluid checkout widget ready to facilitate real-time payments on your platform. Happy streamlining!
 
 ## Step 2: Integrating Widget into Your App
 
