--- a/docs/pages/docs/integrate-the-widget/how-to-integrate.mdx
+++ b/docs/pages/docs/integrate-the-widget/how-to-integrate.mdx
@@ -26,6 +26,8 @@ Craft your Widget JSON following our step-by-step guide [here](../building-the-w
 
 ### Step 4: Implement the Widget in Your Component
 
+In this example, we name our JSON file `data`:
+
 ```jsx
 export function MyComponent() {
   return (
