adding custom token lists to docs

--- a/docs/pages/docs/integrate-the-widget/how-to-integrate.mdx
+++ b/docs/pages/docs/integrate-the-widget/how-to-integrate.mdx
@@ -41,3 +41,10 @@ export function MyComponent() {
 ```
 
 </Steps> 
+
+<Callout type="default">
+
+_You can create your own **custom Token List** if you the Super Tokens you want to use are not listed in the Superfluid Token List package.
+Learn more about how to do that in the [next section](/docs/integrate-the-widget/create-your-custom-token-list.mdx)._
+
+</Callout>
