--- a/docs/pages/docs/faq.mdx
+++ b/docs/pages/docs/faq.mdx
@@ -6,7 +6,7 @@
 
 Superfluid is an asset streaming protocol designed for crypto-native businesses and DAOs worldwide,
 facilitating subscriptions, salaries, vesting, and rewards. It employs the Super Token, an enhanced version of the ERC20 standard,
-to execute novel value movements automatically, representing real-time cash flows without gas consumption. The Super Token has two distinctive Super Agreements:
+to execute novel ways of value movements automatically, representing real-time cash flows without gas consumption. The Super Token has two distinctive Super Agreements:
 the Constant Flow Agreement for continuous token flow between accounts without capital lockup, and the Instant Distribution Agreement for proportion-based token
 distribution to multiple accounts. As an extended form of ERC20, Super Tokens maintain inherent composability, allowing for versatile financial interactions like staking
 an NFT to receive a direct Super Token stream.
