--- a/docs/pages/docs/integrate-the-widget/handling-events.mdx
+++ b/docs/pages/docs/integrate-the-widget/handling-events.mdx
@@ -2,7 +2,7 @@ import { Callout, Tabs, Steps, Cards, Tab } from "nextra/components";
 
 ## Events Handling
 
-Blockchain Events play a crucial role in understanding the real-time behavior of streams. The primary event to watch for is the `flowUpdated` event. You can retrieve these events from our subgraph or query them directly on-chain.
+Blockchain Events play a crucial role in understanding the real-time behavior of streams. The primary event to watch for is the `flowUpdated` event. You can retrieve these events from our [subgraph](https://console.superfluid.finance/subgraph) or query them directly on-chain.
 
 ```graphql
 query MyQuery {
